<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="citymayor_name">Vicente B. Amante PhD</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="economy">Economy</string>
    <string name="exit_button">Close Screen</string>
    <string name="comprehensive_development_n_program">Comprehensive Development \n Program</string>
    <string name="volume_1">Volume 1</string>
    <string name="volume_2">Volume 2</string>
    <string name="volume_3">Volume 3</string>
    <string name="comprehensive_development_plan">Comprehensive Development Plan</string>
    <string name="spc_ecological_profile">SPC Ecological Profile</string>
    <string name="cdp_annexes">CDP Annexes</string>
    <string name="download_file">Download File</string>
    <string name="would_you_like_to_download_this_document">Would you like to download this document?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="emergency_hotline">Emergency Hotline</string>
    <string name="this_is_the_logo_of_spc">This is the logo of SPC</string>
    <string name="san_pablo_city">San Pablo City</string>
    <string name="city_government_of_san_pablo_city">City Government of San Pablo</string>
    <string name="the_city">The City</string>
    <string name="government">Government</string>
    <string name="tourism">Tourism</string>
    <string name="freedom_of_information">Freedom Of Information</string>
    <string name="username">Username</string>
    <string name="arta_corner">ARTA Corner</string>
    <string name="citizen_s_charter">Citizen\'s Charter</string>
    <string name="chart">Chart</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="content_not_yet_available">Content not yet Available</string>
    <string name="the_content_you_are_trying_to_access_is_currently_unavailable">The content you are trying to access is currently unavailable.</string>
    <string name="ela_dialog">Ela Dialog</string>
    <string name="back">Back</string>
    <string name="san_pablo_city_officials">San Pablo City Officials</string>
    <string name="city_mayor_of_san_pablo_city">City Mayor of San Pablo City</string>
    <string name="picture_of_mayor">Picture of Mayor</string>
    <string name="hon_mayor_vicente_quot_vic_quot_b_amante">Hon. Mayor Vicente \"Vic\" B. Amante</string>
    <string name="city_vice_mayor_of_san_pablo_city">City Vice Mayor of San Pablo City</string>
    <string name="picture_of_vice_mayor">Picture Of Vice Mayor</string>
    <string name="hon_justine_g_colago">Hon. Justine G. Colago</string>
    <string name="justincolago_sp_gmail_com">justincolago.sp@gmail.com</string>
    <string name="list_of_councilors">List of Councilors</string>
    <string name="city_councilor">City Councilor</string>
    <string name="picture_of_councilor">Picture Of Councilor</string>
    <string name="hon_angelita_erasmo_yang">Hon. Angelita Erasmo Yang</string>
    <string name="angieyang_sp_gmail_com">angieyang.sp@gmail.com</string>
    <string name="hon_carmela_asa_a_acebedo">Hon. Carmela Asaña Acebedo</string>
    <string name="carmelaacebedo_sp_gmail_com">carmelaacebedo.sp@gmail.com</string>
    <string name="hon_lou_vincent_bondad_amante">Hon. Lou Vincent Bondad Amante</string>
    <string name="ambovincent1996_sp_gmail_com">ambovincent1996.sp@gmail.com</string>
    <string name="hon_christian_dior_capuno_amante">Hon. Christian Dior Capuno. Amante</string>
    <string name="christiandioramante_sp_gmail_com">christiandioramante.sp@gmail.com</string>
    <string name="hon_martin_angelo_belen_adriano_jr">Hon. Martin Angelo Belen Adriano JR.</string>
    <string name="geladriano_sp_gmail_com">geladriano.sp@gmail.com</string>
    <string name="hon_francis_andal_calatraba">Hon. Francis Andal Calatraba</string>
    <string name="franciscalatraba_sp_gmail_com">franciscalatraba.sp@gmail.com</string>
    <string name="hon_richard_conducto_pavico">Hon. Richard Conducto Pavico</string>
    <string name="chad_z_168_sp_gmail_com">chad’z 168.sp@gmail.com</string>
    <string name="hon_buhay_dimabugti_espiritu">Hon. Buhay Dimabugti Espiritu</string>
    <string name="buhayespiritu_sp_gmail_com">buhayespiritu.sp@gmail.com</string>
    <string name="hon_cesarito_cusi_ticzon">Hon. Cesarito Cusi Ticzon</string>
    <string name="konsidocticzon_sp_gmail_com">konsidocticzon.sp@gmail.com</string>
    <string name="abc_president">ABC President</string>
    <string name="hon_dandi_calabia_medina">Hon. Dandi Calabia Medina</string>
    <string name="dandimedina_sp_gmail_com">dandimedina.sp@gmail.com</string>
    <string name="hon_ariston_a_amante">Hon. Ariston A. Amante</string>
    <string name="aristonamante_sp_gmail_com">aristonamante.sp@gmail.com</string>
    <string name="sk_federation_president">SK Federation President</string>
    <string name="hon_liberty_pamela_e_capuchino">Hon. Liberty Pamela E. Capuchino</string>
    <string name="libertypcapunchino_sp_gmail_com">libertypcapunchino.sp@gmail.com</string>
    <string name="city_administrator">City Administrator</string>
    <string name="accounting_office">Accounting Office</string>
    <string name="city_accountant">City Accountant</string>
    <string name="agriculture_office">Agriculture Office</string>
    <string name="city_agriculturist_office_concurrent">City Agriculturist Office (Concurrent)</string>
    <string name="assessor_office">Assessor Office</string>
    <string name="assistant_assessor_office">Assistant Assessor Office</string>
    <string name="budget_office">Budget Office</string>
    <string name="city_budget_officer">City Budget Officer</string>
    <string name="city_building_official_office">City Building Official Office</string>
    <string name="city_civil_registrar">City Civil Registrar</string>
    <string name="city_civil_registry_office">City Civil Registry Office</string>
    <string name="cooperative_office">Cooperative Office</string>
    <string name="city_cooperative_officer_cgdh_1">City Cooperative Officer/ CGDH-1</string>
    <string name="city_disaster_risk_reduction_and_management_office">City Disaster Risk Reduction and Management Office</string>
    <string name="engineering_office">Engineering Office</string>
    <string name="assistant_city_risk_reduction_and_management_office">Assistant City Risk Reduction and Management Office</string>
    <string name="assistant_city_engineer">Assistant City Engineer</string>
    <string name="environment_and_natural_resources_office">Environment and Natural Resources Office</string>
    <string name="general_services_office">General Services Office</string>
    <string name="officer_in_charge_city_general_services_officer">Officer in Charge - City General Services Officer</string>
    <string name="health_office">Health Office</string>
    <string name="city_health_officer">City Health Officer</string>
    <string name="human_resource_management_office">Human Resource Management Office</string>
    <string name="information_office">Information Office</string>
    <string name="officer_in_charge_city_information_officer">Officer in Charge - City Information Officer</string>
    <string name="legal_office">Legal Office</string>
    <string name="city_legal_name">City Legal Name</string>
    <string name="city_legal_officer">City Legal Officer</string>
    <string name="planning_and_development_office">Planning and Development Office</string>
    <string name="planning_and_development_officer">Planning and Development Officer</string>
    <string name="population_office">Population Office</string>
    <string name="city_population_officer">City Population Officer</string>
    <string name="social_welfare_and_development">Social Welfare and Development</string>
    <string name="online_request">Online Request</string>
    <string name="disclosure">Disclosure</string>
    <string name="statement_of_debt_services_03_24_14">Statement of Debt Services 03.24.14</string>
    <string name="unliquidated_2018">Unliquidated-2018</string>
    <string name="statement_of_cash_flows_general_fund">Statement of Cash Flows-General Fund</string>
    <string name="condensed_statement_of_financial_performance_gf">Condensed statement of Financial Performance - GF</string>
    <string name="condensed_statement_of_financial_position_gf">Condensed statement of Financial Position - GF</string>
    <string name="clear">Clear</string>
    <string name="request_copy_of_td_oha">Request Copy of TD/OHA</string>
    <string name="bplo_fill_up_forms">BPLO Fill-up Forms</string>
    <string name="birth_certificate">Birth Certificate</string>
    <string name="marriage_certificate">Marriage Certificate</string>
    <string name="death_certificate">Death Certificate</string>
    <string name="my_business">My Business</string>
    <string name="issuance_of_mayor_s_permit_for_new_business_registration">Issuance of Mayor\'s Permit for New Business Registration</string>
    <string name="clients">Clients:</string>
    <string name="business_permit_applicants">Business Permit Applicants</string>
    <string name="fees">Fees:</string>
    <string name="based_on_the_revised_revenue_ncode_of_the_city_of_san_pablo">Based on the Revised Revenue\nCode of the City of San Pablo</string>
    <string name="total_processing_time">Total Processing Time:</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="schedule_of_service">Schedule of Service:</string>
    <string name="monday_to_friday">Monday to Friday</string>
    <string name="_8_00_am_to_5_00_pm_no_noon_break">8:00 am to 5:00 pm (No noon Break)</string>
    <string name="requirements">Requirements</string>
    <string name="_1_filled_up_unified_business_permit_application_form_2_one_1_copy_of_dti_business_name_registration_if_sole_proprietor_sec_registration_and_articles_of_incorporation_if_corporation_or_partnership_cda_registration_and_articles_of_cooperation_if_cooperative_3_one_1_photo_copy_contract_of_lease_ans_xerox_copy_of_lessor_mayor_s_permit_if_place_of_business_is_rented_4_one_1_photo_copy_of_business_capitalization_5_one_1_original_copy_of_occupancy_permit_for_newly_constructed_building_6_one_1_duplicate_and_or_photo_copy_of_market_clearance_if_market_stall_holder_7_one_1_photo_copy_of_occupancy_permit_for_newly_constructed_building_8_one_1_photo_copy_of_sss_philhealth_pag_i_b_i_g_certification_of_coverage">1. Filled-up unified Business permit application form \n2. One(1) copy of DTI Business name registration (if sole proprietor) SEC Registration and Articles of Incorporation(if Corporation or Partnership) CDA Registration and Articles of Cooperation(if Cooperative \n3. One(1) Photo Copy Contract of lease ans Xerox copy of Lessor Mayor’s Permit(if place of business is rented) \n4. One(1) Photo Copy of Business Capitalization \n5. One(1) Original Copy of Occupancy Permit (for Newly Constructed Building) \n6. One(1) Duplicate and /or Photo Copy of Market Clearance (if Market Stall Holder) \n7. One(1) Photo Copy of Occupancy Permit(for Newly Constructed Building \n8. One(1) Photo Copy of SSS, PHILHEALTH, PAG-I.B.I.G. Certification of Coverage</string>
    <string name="business_identification_number_bin">Business Identification Number (BIN)</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
</resources>