<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_username"
            android:icon="@drawable/ic_navbar_username"
            android:title="@string/username" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_navbar_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_thecity"
            android:icon="@drawable/ic_navbar_thecity"
            android:title="@string/the_city" />
        <item
            android:id="@+id/nav_government"
            android:icon="@drawable/ic_navbar_government"
            android:title="@string/government" />
        <item
            android:id="@+id/nav_economy"
            android:icon="@drawable/ic_navbar_economy"
            android:title="@string/economy" />
        <item
            android:id="@+id/nav_tourism"
            android:icon="@drawable/ic_navbar_tourism"
            android:title="@string/tourism" />
        <item
            android:id="@+id/nav_foi"
            android:icon="@drawable/ic_navbar_foi"
            android:title="@string/freedom_of_information" />
        <item
            android:id="@+id/nav_arta"
            android:icon="@drawable/ic_navbar_arta"
            android:title="@string/arta_corner" />
    </group>
</menu>