<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005acd">

    <TextView
        android:id="@+id/textView252"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/online_request"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="812dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_radius_upcorner"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView252">

        <Button
            android:id="@+id/btnTD"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#007fdb"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/request_copy_of_td_oha"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button222"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#007fdb"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/bplo_fill_up_forms"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button42"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#007fdb"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/birth_certificate"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button43"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#007fdb"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/marriage_certificate"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button44"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#007fdb"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/death_certificate"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>