<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="645dp"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView531"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/my_business"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView532"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/business_identification_number_bin"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextText126"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rpt_inputfield"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView533"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextText127"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rpt_inputfield"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button200"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#00ffffff"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_your_password"
            android:textAllCaps="false"
            android:textColor="#0018f0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button203"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="#000000"
                app:strokeColor="#007fdb"
                app:strokeWidth="2.5dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button204"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="#007fdb"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>