<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView79"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView484"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#007fdb"
                android:fontFamily="@font/poppins_semibold"
                android:padding="5dp"
                android:text="@string/issuance_of_mayor_s_permit_for_new_business_registration"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal"
                        tools:ignore="TextSizeCheck">

                        <TextView
                            android:id="@+id/textView485"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/clients"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/textView486"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins"
                            android:text="@string/business_permit_applicants"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView487"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/fees"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/textView488"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins"
                            android:text="@string/based_on_the_revised_revenue_ncode_of_the_city_of_san_pablo"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView491"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/total_processing_time"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/textView492"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins"
                            android:text="@string/_30_minutes"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView493"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/schedule_of_service"
                            android:textColor="#000000" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView495"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:fontFamily="@font/poppins"
                                android:text="@string/monday_to_friday"
                                android:textColor="#000000" />

                            <TextView
                                android:id="@+id/textView496"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:fontFamily="@font/poppins"
                                android:text="@string/_8_00_am_to_5_00_pm_no_noon_break"
                                android:textColor="#000000" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView497"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/requirements"
                        android:textAlignment="center"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textView498"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="50dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/_1_filled_up_unified_business_permit_application_form_2_one_1_copy_of_dti_business_name_registration_if_sole_proprietor_sec_registration_and_articles_of_incorporation_if_corporation_or_partnership_cda_registration_and_articles_of_cooperation_if_cooperative_3_one_1_photo_copy_contract_of_lease_ans_xerox_copy_of_lessor_mayor_s_permit_if_place_of_business_is_rented_4_one_1_photo_copy_of_business_capitalization_5_one_1_original_copy_of_occupancy_permit_for_newly_constructed_building_6_one_1_duplicate_and_or_photo_copy_of_market_clearance_if_market_stall_holder_7_one_1_photo_copy_of_occupancy_permit_for_newly_constructed_building_8_one_1_photo_copy_of_sss_philhealth_pag_i_b_i_g_certification_of_coverage"
                        android:textColor="#000000" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>